# RepoLens

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .repolens.toml.example  .repolensignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  commitlint.config.js  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml  self-index.yml
docs/: ARCHITECTURE.md  COMPLETE_GUIDE.md  STEPS.md  TECHSTACK.md  UI_SPEC.md  api-reference.md  configuration.md  contributing.md  index.md  quickstart.md
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AddRepoModal.tsx  ChatMessage.tsx  CitationCard.tsx  DriftFinding.tsx  GroundingBadge.tsx  IndexProgress.tsx  Layout.tsx  RepoCard.tsx  Sidebar.tsx
frontend/src/hooks/: useRepos.ts  useSSE.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
frontend/src/pages/: Chat.tsx  DriftReport.tsx  RepoManager.tsx
frontend/src/styles/: globals.css
scripts/: build.sh  dev.sh  eval.sh  smoke_self_index.py
src/repolens/: __init__.py  cli.py  config.py  server.py
src/repolens/api/: __init__.py  ask.py  deps.py  drift.py  engine.py  repos.py
src/repolens/drift/: __init__.py  checker.py  extractor.py  reporter.py
src/repolens/generation/: __init__.py  prompt.py  scorer.py  validator.py
src/repolens/generation/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
src/repolens/ingestion/: __init__.py  bm25.py  chunker.py  embedder.py  graph.py  parser.py  walker.py
src/repolens/retrieval/: __init__.py  expander.py  hybrid.py  reranker.py
src/repolens/storage/: __init__.py  graph.py  metadata.py  paths.py  pipeline.py  vector.py
src/repolens/utils/: __init__.py  cache.py  ignore.py  logger.py
tests/: conftest.py
tests/e2e/: conftest.py  test_ask_endpoint.py  test_drift_endpoint.py
tests/eval/: __init__.py  cases.py  run_eval.py
tests/fixtures/: sample.go  sample.py
tests/integration/: test_embedder_model.py  test_ingestion.py  test_retrieval.py
tests/unit/: test_bm25.py  test_cache.py  test_chunker.py  test_embedder.py  test_graph.py  test_hybrid.py  test_ignore.py  test_parser.py  test_scorer.py  test_validator.py
website/: README.md  index.html  script.js  styles.css
