[project]
name = "repolens"
version = "0.1.0"
description = "A local-first RAG engine that answers questions about any repository, grounded exclusively in the checked-out code with verifiable file:line citations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RepoLens contributors" }]
keywords = ["rag", "code-search", "tree-sitter", "embeddings", "documentation-drift"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "GitPython>=3.1.43",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",
    "lancedb>=0.10.0",
    "rank-bm25>=0.2.2",
    "networkx>=3.3",
    "httpx>=0.27.0",
    "anthropic>=0.28.0",
    "openai>=1.35.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
docs = [
    "mkdocs-material>=9.5.0",
]

[project.urls]
Homepage = "https://github.com/repolens/repolens"
Documentation = "https://github.com/repolens/repolens"
Repository = "https://github.com/repolens/repolens"
Changelog = "https://github.com/repolens/repolens/blob/main/CHANGELOG.md"

[project.scripts]
repolens = "repolens.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repolens"]

[tool.uv]
package = true

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
